[workspace]
resolver = "3"
members = ["smoothie-filter", "smoothie-server"]
exclude = ["praxis"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"

[workspace.dependencies]
async-trait = "0.1.89"
bytes = "1.12.0"
dashmap = "6.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = { package = "yaml_serde", version = "0.10.4" }
tracing = "0.1.44"
praxis-filter = { path = "praxis/filter", package = "praxis-proxy-filter" }
praxis = { path = "praxis/server", package = "praxis-proxy" }
clap = { version = "4.6.1", features = ["derive"] }
tikv-jemallocator = "0.7.0"

[workspace.lints.rust]
dead_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
codegen-units = 1
lto = true
overflow-checks = true
panic = "abort"
strip = true
