[package]
name = "smoothie-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
praxis = { workspace = true }
praxis-filter = { workspace = true }
serde_yaml = { workspace = true }
smoothie-filter = { path = "../smoothie-filter" }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { workspace = true }
